Fix TS5097 by removing .tsx extension in main import

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_SUPABASE_URL=https://VITE_SUPABASE_URL.supabase.co
 VITE_SUPABASE_ANON_KEY=https://VITE_SUPABASE_ANON_KEY.supabase.co
+# make sure a production build also works locally
+npm run build
